v2.19.1 - Fix for Breadcrumbs on iPhone/iPad

--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -16,6 +16,10 @@
   padding: 0px;
 }
 
+.breadcrumb > li {
+  display: inline;
+}
+
 .divider {
   color: #444444;
 }
